--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,13 @@ updates:
     directory: /
     schedule:
       interval: daily
+
   - package-ecosystem: gomod
     directory: /
+    schedule:
+      interval: daily
+
+  - package-ecosystem: docker
+    directory: /docker
     schedule:
       interval: daily
