--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -1,4 +1,4 @@
-name: Release prettier
+name: Release test
 on:
   workflow_dispatch:
     inputs:
@@ -36,8 +36,8 @@ jobs:
     needs: [extract]
     uses: ./.github/workflows/reusable-release.yml
     with:
-      name: prettier
-      description: Dockernized prettier, it's an opinionated code formatter..
+      name: test
+      description: Dockernized test, it's an opinionated code formatter.
       version: ${{ needs.extract.outputs.version }}
       push: ${{ inputs.push }}
     secrets:
@@ -45,3 +45,5 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: write
+      attestations: write
