--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -29,7 +29,7 @@ jobs:
         id: extract
         run: |
           set -x
-          version="$(jq -r ".dependencies.prettier" prettier/package.json)"
+          version="$(jq -r ".dependencies.prettier" test/package.json)"
           echo "version=${version}" >> "${GITHUB_OUTPUT}"
 
   release:
