chore: update workflows

--- a/.github/workflows/reusable-release.yml
+++ b/.github/workflows/reusable-release.yml
@@ -214,6 +214,7 @@ jobs:
     needs: [push, sign]
     permissions:
       contents: write
+      packages: read
       id-token: write
       pull-requests: write
     steps:
