chore: update workflows

--- a/.github/workflows/reusable-release.yml
+++ b/.github/workflows/reusable-release.yml
@@ -255,7 +255,7 @@ jobs:
             --certificate-github-workflow-sha "${GITHUB_SHA}" \
             "${GHCR_IMAGE}@${IMAGE_DIGEST}" > "${cosign_path}" 2>&1
 
-          sed '/^\[{/q' "${cosign_path}" > "${cosign_trimmed_path}"
+          head -7 "${cosign_path}" > "${cosign_trimmed_path}"
           json_line="$(grep '^\[{' "${cosign_path}" | cut -c 1-100)"
           echo "${json_line}..." >> "${cosign_trimmed_path}"
 
